[package]
name = "native-session-analyzer"
version = "0.1.0"
authors = ["Thomas Bonk <thomas@bonk.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
serde = "1.0.114"
serde_derive = "1.0.114"
rayon = "1.3.1"
